dynamodel_tests/tests/fails/enum_unit.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
enum Unit {
    Str,
    Int,
}

fn main() {}
